daemon/gdm-server.h
@@ -55,11 +55,9 @@ typedef struct
 GType               gdm_server_get_type  (void);
 GdmServer *         gdm_server_new       (const char *display_id,
                                           const char *seat_id,
-                                          const char *auth_file);
+                                          const char *auth_file,
+                                          gboolean    initial);
 gboolean            gdm_server_start     (GdmServer   *server);
-#ifdef WITH_PLYMOUTH
-gboolean            gdm_server_start_on_active_vt (GdmServer   *server);
-#endif
 gboolean            gdm_server_stop      (GdmServer   *server);
 char *              gdm_server_get_display_device (GdmServer *server);
 
